--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,13 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	// websocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation group: 'org.webjars', name: 'stomp-websocket', version: '2.3.3-1'
+
+	// JSON
+	implementation group: 'org.json', name: 'json', version: '20231013'
 }
 
 tasks.named('test') {
