--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	// h2
 	runtimeOnly 'com.h2database:h2'
+
+	// oracle
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
+	implementation 'com.oracle.database.security:oraclepki:21.5.0.0'
+	implementation 'com.oracle.database.security:osdt_core:21.5.0.0'
+	implementation 'com.oracle.database.security:osdt_cert:21.5.0.0'
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// 스프링 시큐리티를 테스트하기 위한 의존성 추가
