feat: log 나오도록 추가 #22

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,9 @@ spring:
         - prod
         - config
         - db
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.orm.schema: debug
+    org.hibernate.type.descriptor.sql.BasicBinder: trace
