feat: HTE 임시 테이블 생성 못하도록 mutation 전략의 GTT 사용 하지 않도록 설정 #22

--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -4,6 +4,9 @@ spring:
       ddl-auto: update
 
     properties:
+      hibernate.query.mutation_strategy.global_temporary.create_tables: false
+      hibernate.query.mutation_strategy.global_temporary.drop_tables: false
+
       hibernate:
         format_sql: true
-        show_sql: true
+#        show_sql: true
