--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,12 @@ spring:
         - dev
         - config
         - db
+        - common
       prod:
         - prod
         - config
         - db
+        - common
 
 logging:
   level:
