chore: local에서 prod로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: OOLFinance
   profiles:
-    active: local
+    active: prod
     group:
       local:
         - dev
