feat: test코드 업로드 방지용 ignore 추가 #24

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ HELP.md
 .gradle
 build/
 
+/src/test/
 /src/main/resources/connection/
 /src/main/resources/application-config.yml
 !gradle/wrapper/gradle-wrapper.jar
