--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,9 @@ dependencies {
 
 	// Thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	// Jsoup
+	implementation 'org.jsoup:jsoup:1.17.2'
 }
 
 tasks.named('test') {
